--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "next-cloudinary": "^4.22.0",
     "postcss": "8.4.29",
     "prisma": "^5.3.1",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-email": "^1.9.4",
     "tailwindcss": "3.3.3",
