--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,6 @@ GOOGLE_CLIENT_ID=<client id>
 
 #google client secret
 GOOGLE_CLIENT_SECRET=<client secret>
+
+#resend api key
+RESEND_API_KEY=<key>
