--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "bcrypt": "^5.1.1",
+    "easymde": "^2.18.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.4.19",
     "fast-sort": "^3.4.0",
@@ -32,6 +33,7 @@
     "react-dom": "18.2.0",
     "react-email": "^1.9.4",
     "react-icons": "^4.11.0",
+    "react-simplemde-editor": "^5.2.0",
     "resend": "^1.0.0",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2",
