--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
+    "axios": "^1.5.1",
     "bcrypt": "^5.1.1",
     "easymde": "^2.18.0",
     "eslint": "8.49.0",
@@ -32,6 +33,7 @@
     "react": "^18.2.0",
     "react-dom": "18.2.0",
     "react-email": "^1.9.4",
+    "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
     "react-simplemde-editor": "^5.2.0",
     "resend": "^1.0.0",
