--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-email": "^1.9.4",
     "react-hook-form": "^7.46.1",
     "react-icons": "^4.11.0",
+    "react-loading-skeleton": "^3.3.1",
     "react-simplemde-editor": "^5.2.0",
     "resend": "^1.0.0",
     "tailwindcss": "3.3.3",
